--- a/icg_project/handin/index.html
+++ b/icg_project/handin/index.html
@@ -29,20 +29,23 @@
 	<h3>Tiles design</h3>
 
 	<h3>Tiles rendering</h3>
-		For the rendering of the tiles, we used MagicaVoxel, which was provided to us by the TAs. 
-		It was really fun and easy to use and it allowed us to create tiles in 3D for our project. All the tiles and the floor were made
-		by us and so we had to pay attention when creating a new tile to how it was going to fit the others.
-		We created tiles with roof, no roof, with door when the tile was put on the floor, no door and different positions (middle, left, right, corner).
-		This allowed us to have a lot of different possibilities when using the wave collapse function to build a great variety of buildings.
-		<p style="text-align: center;"><img src="media/pretty_balcony.PNG" width="50%"><br>
-			creation of the balcony
-		</p>
-		<p style="text-align: center;"><img src="media/alone_house.PNG" width="50%"><br>
-			base tile, first tile we created
-		</p>
-		<p style="text-align: center;"><img src="media/left_nr.PNG" width="50%"><br>
-			variation of tile, no roof, getting attached to the left
-		</p>
+	For the rendering of the tiles, we used MagicaVoxel, which was provided to us by the TAs.
+	It was really fun and easy to use and it allowed us to create tiles in 3D for our project. All the tiles and the
+	floor were made
+	by us and so we had to pay attention when creating a new tile to how it was going to fit the others.
+	We created tiles with roof, no roof, with door when the tile was put on the floor, no door and different positions
+	(middle, left, right, corner).
+	This allowed us to have a lot of different possibilities when using the wave collapse function to build a great
+	variety of buildings.
+	<p style="text-align: center;"><img src="media/pretty_balcony.PNG" width="50%"><br>
+		creation of the balcony
+	</p>
+	<p style="text-align: center;"><img src="media/alone_house.PNG" width="50%"><br>
+		base tile, first tile we created
+	</p>
+	<p style="text-align: center;"><img src="media/left_nr.PNG" width="50%"><br>
+		variation of tile, no roof, getting attached to the left
+	</p>
 
 	<h4>Actors model</h4>
 	<p>For the rendering of our tiles, we created the file <code>tiles.js</code> where we took the basis of the
@@ -102,34 +105,77 @@
 	<h4>Java model</h4>
 	<h4>Sockets matching</h4>
 	<h4>Client Server Architecture</h4>
-	<p>One of the main issues in our project was dealing with both the WebGL displaying using Web coding and the algorithm computation. Indeed, we tried to implement the WFC algorithm in JavaScript, but seing the toughness og the computation, we prefered to keep our initial working Java version. We then had to initiate a link between both applications, and following the ICG team advices, we implemented a client server architecture.</p>
+	<p>One of the main issues in our project was dealing with both the WebGL displaying using Web coding and the
+		algorithm computation. Indeed, we tried to implement the WFC algorithm in JavaScript, but seing the toughness og
+		the computation, we prefered to keep our initial working Java version. We then had to initiate a link between
+		both applications, and following the ICG team advices, we implemented a client server architecture.</p>
 	<h5>Java Server</h5>
 	<h5>JavaScript Client</h5>
-	<p>To query a new tiles set, we set on <strong class="keyboard">g</strong> key the call of a <code>query_new_tileset</code> function. To deal with asynchronicity of our requests, we set boolean flags <code>received_new_tiles</code>,<code>querying_new_tiles</code> and <code>error_on_receive</code> to indicate the state of the query to the rendering pipeline. Indeed, we did not wanted to take the risk to display tiles from a list being modified by 2 parts of the program. We then added <code>if</code> conditions in the frame computation to avoid manipulating <code>actors_list</code> when the query is not fully complete.</p>
-	<p>Another issue we struggled with was the CORS of <code>fetch</code> queries. Indeed, we couldn't get without authentification the GET RESULT of our query to the Java Server. To handle it, we made the the Java Server write its output tiles' layout to <code>tiles.json</code> file. After that, we could load the JSON file and get the tiles to display</p>
-	<p>Finally, we had to adapt our <code>actors_list</code> but also <code>actors_by_name</code>. To do so, we created the <code>create_actor_list</code> and <code>create_actor_corner_by_name</code> that was called in the rendering pipeline by putting the <code>draw_list = actors_list.slice()</code> line inside the frame computation.</p>
-	<p>With this whole process, we were able to, and with no concurrence major issue, call our Java server for updating our tiles set to place in world and adquatly render it on the <strong class="keyboard">g</strong> key pressing.</p>
+	<p>To query a new tiles set, we set on <strong class="keyboard">g</strong> key the call of a
+		<code>query_new_tileset</code> function. To deal with asynchronicity of our requests, we set boolean flags
+		<code>received_new_tiles</code>,<code>querying_new_tiles</code> and <code>error_on_receive</code> to indicate
+		the state of the query to the rendering pipeline. Indeed, we did not wanted to take the risk to display tiles
+		from a list being modified by 2 parts of the program. We then added <code>if</code> conditions in the frame
+		computation to avoid manipulating <code>actors_list</code> when the query is not fully complete.
+	</p>
+	<p>Another issue we struggled with was the CORS of <code>fetch</code> queries. Indeed, we couldn't get without
+		authentification the GET RESULT of our query to the Java Server. To handle it, we made the the Java Server write
+		its output tiles' layout to <code>tiles.json</code> file. After that, we could load the JSON file and get the
+		tiles to display</p>
+	<p>Finally, we had to adapt our <code>actors_list</code> but also <code>actors_by_name</code>. To do so, we created
+		the <code>create_actor_list</code> and <code>create_actor_corner_by_name</code> that was called in the rendering
+		pipeline by putting the <code>draw_list = actors_list.slice()</code> line inside the frame computation.</p>
+	<p>With this whole process, we were able to, and with no concurrence major issue, call our Java server for updating
+		our tiles set to place in world and adquatly render it on the <strong class="keyboard">g</strong> key pressing.
+	</p>
 	<h4>Constrained computation</h4>
 
 	<h3>Bézier curves camera paths</h3>
-	<p>Seeing our visual result getting closer to what we expected, we decided that the extension of the camera to follow Bézier curve's path was perfectly adapted to add the smoothness we wanted.</p>
-	<p>To do so, we added many parameters with prefix <code>old_</code> and <code>new_</code>. Those ones helped us to specify the beginning and end values to be interpolated for the <code>cam_distance_factor</code>, <code>cam_angle_z</code> and <code>cam_angle_y</code>. Those ones were not necessary for our pure Bézier curve but we decided it would be smooth to also linearly lerp those values with the same time parameter as the Bézier's. The visual result is that the camera rotates and goes back/forward whenever we change its position and recenters on a nice position/rotation/distance.</p>
+	<p>Seeing our visual result getting closer to what we expected, we decided that the extension of the camera to
+		follow Bézier curve's path was perfectly adapted to add the smoothness we wanted.</p>
+	<p>To do so, we added many parameters with prefix <code>old_</code> and <code>new_</code>. Those ones helped us to
+		specify the beginning and end values to be interpolated for the <code>cam_distance_factor</code>,
+		<code>cam_angle_z</code> and <code>cam_angle_y</code>. Those ones were not necessary for our pure Bézier curve
+		but we decided it would be smooth to also linearly lerp those values with the same time parameter as the
+		Bézier's. The visual result is that the camera rotates and goes back/forward whenever we change its position and
+		recenters on a nice position/rotation/distance.
+	</p>
 	<video class="vid" loop autoplay muted src="media/camera_rotation.mp4" width="50%"></video>
 	<p style="text-align: center;">Example of rotating and placing camera in linear interpolation</p>
-	<p>The key of the Bézier interpolation is the <code>bezier_param</code> that represents the time parameter \(t\) that evolves from \(0\) to \(1\). Whenever the user asks for a new position to be selected, the <code>bezier_param</code> value is set back to \(0\) and the new <code>cam_distance_factor</code>, <code>cam_angle_z</code> and <code>cam_angle_y</code> are put in the <code>new_</code> variables. When this value gets back to \(1\), we know our update is done and we just apply the same transformation as before in the previous Exercice 5 where camera just centers on a selected Actor.</p>
-	<p>We decided to put three control point in our Bézier paths as we were very satisfied with the result. Having those 3 meant that we had to take a starting point, <code>old_selected_corner_position</code>, and ending point <code>new_selected_corner_position</code> and a middle point <code>third_point_position</code>. To have a simetrical curve and create a curvy effect, we placed this point on the perpendicular bisector of the straight line between start and end point. The shape aspect of our curve is displayed below.</p>
+	<p>The key of the Bézier interpolation is the <code>bezier_param</code> that represents the time parameter \(t\)
+		that evolves from \(0\) to \(1\). Whenever the user asks for a new position to be selected, the
+		<code>bezier_param</code> value is set back to \(0\) and the new <code>cam_distance_factor</code>,
+		<code>cam_angle_z</code> and <code>cam_angle_y</code> are put in the <code>new_</code> variables. When this
+		value gets back to \(1\), we know our update is done and we just apply the same transformation as before in the
+		previous Exercice 5 where camera just centers on a selected Actor.
+	</p>
+	<p>We decided to put three control point in our Bézier paths as we were very satisfied with the result. Having those
+		3 meant that we had to take a starting point, <code>old_selected_corner_position</code>, and ending point
+		<code>new_selected_corner_position</code> and a middle point <code>third_point_position</code>. To have a
+		simetrical curve and create a curvy effect, we placed this point on the perpendicular bisector of the straight
+		line between start and end point. The shape aspect of our curve is displayed below.
+	</p>
 	<p style="text-align: center;"><img src="media/bezier_curve.png" width="30%"><br>
 		The shape of our created Bézier curve (from the course's web slides) [2]
 	</p>
-	<p>Once those points were computed, we could solve the quadratic equation using the de Castlejau algorithm [2]: $$\textbf{x}(t)=(1-t)^2\textbf{b}_0+2(1-t)t\textbf{b}_1+t^2\textbf{b}_2$$ Where <strong>b</strong> points are the controle points. Observing the <code>vec3</code> class, we saw a method computing exactly the desired result <code>vec3.bezier(out, a, b, c, d, t)</code>. Observing that putting our third point in place of <code>b</code> and <code>c</code> intermediary paramaters results in the same as having one middle paramater, we used it to output the desired camera translation at every intermediary points between the old and new camera positions and modify accordingly the <code>mat_view</code> matrix in the frame computation. We finally update our time to simulate a time effect and make our paramter grow to \(1\).</p>
+	<p>Once those points were computed, we could solve the quadratic equation using the de Castlejau algorithm [2]:
+		$$\textbf{x}(t)=(1-t)^2\textbf{b}_0+2(1-t)t\textbf{b}_1+t^2\textbf{b}_2$$ Where <strong>b</strong> points are
+		the controle points. Observing the <code>vec3</code> class, we saw a method computing exactly the desired result
+		<code>vec3.bezier(out, a, b, c, d, t)</code>. Observing that putting our third point in place of <code>b</code>
+		and <code>c</code> intermediary paramaters results in the same as having one middle paramater, we used it to
+		output the desired camera translation at every intermediary points between the old and new camera positions and
+		modify accordingly the <code>mat_view</code> matrix in the frame computation. We finally update our time to
+		simulate a time effect and make our paramter grow to \(1\).
+	</p>
 	<p>The visual result looked very nice to us and we liked to move around our houses following thos curves.</p>
 	<video class="vid" loop autoplay muted src="media/bezier_paths.mp4" width="60%"></video>
 	<p style="text-align: center;">Some examples of Bézier camera paths</p>
 
 	<h3>User Interface</h3>
-		To create the user interface used when setting constraints (pressing w), we used html and css. We wanted it to be 
-		as easy as possible for the user to set constraints, so we implemented checkboxes which allow to choose a position on the grid
-		and the tile you want to see at this position. 
+	To create the user interface used when setting constraints (pressing w), we used html and css. We wanted it to be
+	as easy as possible for the user to set constraints, so we implemented checkboxes which allow to choose a position
+	on the grid
+	and the tile you want to see at this position.
 	<h4>Tile selection</h4>
 	<h4>Constraints setting</h4>
 
@@ -145,7 +191,16 @@
 	<h2>Results</h2>
 	<h3>Optimization possibilities</h3>
 	<h3>How to launch the project</h3>
-	<p>TODO</p>
+	<p>As described above, our project requires Java Server to run to compute new tiles sets. To launch the project,
+		please be at the root of the project folder and run:</p>
+	<pre class="prettyprint lang-sh">
+	<code>python3 -m http.server</code>
+	</pre>
+	while in another terminal running:
+	<pre class="prettyprint lang-sh">
+	<code>cd WaveCollapse_classes; java JavaServer</code>
+	</pre>
+	<h3>Project demo</h3>
 	<iframe src="project.html" style="height:700px;width:1000px; margin:auto; display:block;">
 		<script src="./src/main.js" defer="true"></script>
 
@@ -268,7 +323,9 @@
 	<p>TODO</p>
 
 	<h2>References</h2>
-	[1] <a href="https://www.epfl.ch">TODO</a><br/>
-	[2] <a href="https://lgg.epfl.ch/teaching/ICG20/icg_lectures/Online11-Bezier-Curves.html#/de-casteljau-leftrightarrow-bernstein-basis">Bézier interpolation formula</a> <br/>
+	[1] <a href="https://www.epfl.ch">TODO</a><br />
+	[2] <a
+		href="https://lgg.epfl.ch/teaching/ICG20/icg_lectures/Online11-Bezier-Curves.html#/de-casteljau-leftrightarrow-bernstein-basis">Bézier
+		interpolation formula</a> <br />
 
 </body>
