Adds members' contribution

--- a/icg_project/handin/index.html
+++ b/icg_project/handin/index.html
@@ -27,16 +27,15 @@
 		Generator. We based our GLSL and JavaScript implementations of the Exercice 5: Solar Shading.</p>
 
 	<h3>Tiles design</h3>
-
-	<h3>Tiles rendering</h3>
-	For the rendering of the tiles, we used MagicaVoxel, which was provided to us by the TAs.
-	It was really fun and easy to use and it allowed us to create tiles in 3D for our project. All the tiles and the
-	floor were made
-	by us and so we had to pay attention when creating a new tile to how it was going to fit the others.
-	We created tiles with roof, no roof, with door when the tile was put on the floor, no door and different positions
-	(middle, left, right, corner).
-	This allowed us to have a lot of different possibilities when using the wave collapse function to build a great
-	variety of buildings.
+	<p>For the rendering of the tiles, we used MagicaVoxel, which was provided to us by the TAs.
+		It was really fun and easy to use and it allowed us to create tiles in 3D for our project. All the tiles and the
+		floor were made
+		by us and so we had to pay attention when creating a new tile to how it was going to fit the others.
+		We created tiles with roof, no roof, with door when the tile was put on the floor, no door and different
+		positions
+		(middle, left, right, corner).
+		This allowed us to have a lot of different possibilities when using the wave collapse function to build a great
+		variety of buildings.</p>
 	<p style="text-align: center;"><img src="media/pretty_balcony.PNG" width="50%"><br>
 		creation of the balcony
 	</p>
@@ -47,6 +46,7 @@
 		variation of tile, no roof, getting attached to the left
 	</p>
 
+	<h3>Tiles rendering</h3>
 	<h4>Actors model</h4>
 	<p>For the rendering of our tiles, we created the file <code>tiles.js</code> where we took the basis of the
 		<code>planets.js</code> actors modelization. We could get rid of the physical (orbit, speed, size) aspects as we
@@ -320,7 +320,14 @@
 
 
 	<h2>Team members' contribution</h2>
-	<p>TODO</p>
+	<p>Each team member contributed equally and we were very happy to work together and face this huge project was made
+		easier by the smoothness of interacting with each other. Here are the specialized part of each one of us:
+	<ul>
+		<li><strong>Louise</strong>: tiles design and user interface</li>
+		<li><strong>Tom</strong>: tiles rendering, JavaScript client and Bézier curves</li>
+		<li><strong>Emmanuelle</strong>: all the Java Wave Function Collapse algorithm, server architecture</li>
+	</ul>
+	</p>
 
 	<h2>References</h2>
 	[1] <a href="https://www.epfl.ch">TODO</a><br />
